--- a/www/views/feed.hbs
+++ b/www/views/feed.hbs
@@ -7,7 +7,7 @@
 				<img src="images/misquinielas.png">
 				<div class="info_quiniela">
 					<div class="info_quiniela_top">
-						<h2>{{name}}</h2>
+						<h2>{{name_replaced}}</h2>
 						<span class="fecha">{{date_format}}</span>
 					</div>
 					<div class="info_quiniela_bottom">
