Recompile feed template

--- a/www/views/feed.hbs
+++ b/www/views/feed.hbs
@@ -1,6 +1,6 @@
 	{{> header}}
 
-		
+		lorem ipsum feed
 	<div class="contenedor">
 		{{# data.pools}}
 			<div class="quiniela clearfix" data-id="{{id}}">
