--- a/www/views/partials/header.hbs
+++ b/www/views/partials/header.hbs
@@ -1,12 +1,15 @@
-	<header class="clearfix">
+	
+	<header class="clearfix daheader drop_shadow">
+		<h1 class="logo hook" data-resource="home"></h1>
 		<div class="user_info clearfix">
-			<img src="images/user_placeholder.png">
+			<img class="profile_pic" src="images/user_placeholder.png">
 			<div class="username_saldo">
-				<span class="username">Covakid</span>
-				<span class="saldo">$100.00</span>
+				<span class="username">JohnFalcon</span>
+				<span class="saldo">$1000.00</span>
+				<span class="saldo picoins">$120.00</span>
 			</div>
 		</div>
 		<div class="filtros">
-			<img src="images/filtros.png">
+			<img src="images/filtros.png" >
 		</div>
 	</header>
