--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -48,7 +48,7 @@ figure {margin: 0;}
 
 
 /*** SIZING WITH REM ***/
-html { font-size: 62.5%; background: #000; font-size: 14px;} 
+html { font-size: 62.5%; background: #000; font-size: 14px; color: #d8d8d8;} 
 body { font-size: 14px; font-size: 1.4rem; } /* =24px */
 h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
@@ -65,8 +65,8 @@ h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 /*** GENERAL ***/
 
 body {width: 100%; margin: 0 auto;  }
-.container {width: 100%;  padding: 0 5%; position: relative;}
-.content {width: 85%; float: right; position: relative; }
+.container {width: 100%;  padding: 0; position: relative;}
+.content {width: 100%; padding: 0 5%; }
 
 .splash_logo {width: 100%;}
 .splash_logo img {width: 50%; height: auto;}
@@ -134,3 +134,11 @@ body {width: 100%; margin: 0 auto;  }
 .activacion .splash_logo p {font-size: 14px; color: #d8d8d8;  line-height: 22px;  width: 100%; margin: 0 auto 5% auto;}
 .activacion .comenzar {width: 70%; margin-top: 10%;}
 
+/*** LOBBY ***/
+
+.lobby {background-image: url('images/background.png'); background-position: center top; background-size: cover;}
+.header {width: 100%; height; background: #000;}
+.header .header_left {float: left; width: 33%; text-align: center;}
+.header .header_left img {width: 90%; vertical-align: middle;}
+
+.header .header_right {float: right; width: 66.3%;}
