--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -48,7 +48,7 @@ figure {margin: 0;}
 
 
 /*** SIZING WITH REM ***/
-html { font-size: 62.5%; background: #000; font-size: 14px; color: #d8d8d8;} 
+html { font-size: 62.5%; background: #000; font-size: 14px; color: #d8d8d8; font-weight: 300; font-family: 'Lato'!important;} 
 body { font-size: 14px; font-size: 1.4rem; } /* =24px */
 h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
@@ -64,9 +64,9 @@ h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
 /*** GENERAL ***/
 
-body {width: 100%; margin: 0 auto;  }
-.container {width: 100%;  padding: 0; position: relative;}
-.content {width: 100%; padding: 0 5%; }
+body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!important; }
+.container {width: 100%;  padding: 0; position: relative; font-weight: 300; font-family: 'Lato'!important;}
+.content {width: 100%; padding: 0 3%; }
 
 .splash_logo {width: 100%;}
 .splash_logo img {width: 50%; height: auto;}
@@ -81,7 +81,7 @@ body {width: 100%; margin: 0 auto;  }
 .login {text-align: center;}
 .login .splash_logo {padding-top: 30%; margin-bottom: 5%;}
 .login .form {width: 100%; margin-bottom: 20%;}
-.login .form input {width: 100%; background: none; border: 1px solid #ececec; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 14px; padding: 3.5% 2%; }
+.login .form input {width: 100%; background: none; border: 1px solid #d8d8d8; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 14px; padding: 3.5% 2%; }
 .login .form input::placeholder {color: inherit; font-family: 'Lato'}
 .login .form form {margin-bottom: 5%;}
 .login .form a.link_legal {font-size: 14px; color: #8A8A8D; display: block; margin-bottom: 10%; text-decoration: none;}
@@ -99,8 +99,8 @@ body {width: 100%; margin: 0 auto;  }
 .registro .splash_logo p {font-size: 14px; color: #d8d8d8;  line-height: 22px;  width: 75%; margin: 0 auto 10% auto;}
 .registro .fb_registry {width: 70%; margin-bottom: 10%;}
 .registro .form {width: 100%; }
-.registro .form h3 {font-family: 'Lato'; font-weight: 400; font-size: 14px; color: #d8d8d8; margin-bottom: 5%;}
-.registro .form input {width: 100%; background: none; border: 1px solid #ececec; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 14px; padding: 3.5% 2%; }
+.registro .form h3 {font-family: 'Lato'; font-weight: 300; font-size: 14px; color: #d8d8d8; margin-bottom: 5%;}
+.registro .form input {width: 100%; background: none; border: 1px solid #d8d8d8; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 14px; padding: 3.5% 2%; }
 .registro .form input::placeholder {color: inherit; font-family: 'Lato'}
 .registro .form form {margin-bottom: 5%;}
 .registro .form a.link_legal {font-size: 14px; color: #8A8A8D; display: block; margin-bottom: 10%; text-decoration: none;}
@@ -137,8 +137,20 @@ body {width: 100%; margin: 0 auto;  }
 /*** LOBBY ***/
 
 .lobby {background-image: url('images/background.png'); background-position: center top; background-size: cover;}
-.header {width: 100%; height; background: #000;}
-.header .header_left {float: left; width: 33%; text-align: center;}
-.header .header_left img {width: 90%; vertical-align: middle;}
-
-.header .header_right {float: right; width: 66.3%;}
+.header {width: 100%; height; background: #000; padding: 3% 0;}
+.header .header_left {float: left; width: 28%; text-align: center; margin-right: 2%;}
+.header .header_left img {width: 90%; vertical-align: middle; padding-top: 15%}
+.header .header_right {float: right; width: 70%; border-left: 1px solid #414042; padding: 1% 0 1% 0;}
+.header .header_right .header_user_info {width: 75%; float: left; padding-left: 5%;}
+.header .header_right .header_user_info .user_info {width: 100%; margin-bottom: 7.5%}
+.header .header_right .header_user_info .user_info img {width: 24px; height: auto; float: left; margin-right: 7px;}
+.header .header_right .header_user_info .user_info h2 {font-weight: 300; font-family: 'Lato'; font-size: 14px; float: left; margin: 0px; padding-top: 2%;}
+.header .header_right .header_user_info .user_money {width: 100%;}
+.header .header_right .header_user_info .user_money .money_pesos {float: left; margin-right: 5%;}
+.header .header_right .header_user_info .user_money .money_pesos img {width: 20px; height: auto; float: left; margin-top: 3%}
+.header .header_right .header_user_info .user_money .money_pickcoins {float: left;}
+.header .header_right .header_user_info .user_money .money_pickcoins img {width: 14px; height: auto; float: left;}
+.header .header_right .header_user_info .user_money span {display: block; float: left; font-size: 13px; font-family: 'Lato'; margin-left: 5px;}
+.header .header_right .header_filtros {width: 20%; float: right; text-align: center;}
+.header .header_right .header_filtros h4 {font-weight: 700; font-size: 12px; color: #8A8A8D; margin-bottom: 30%; margin-top: 5%;}
+.header .header_right .header_filtros img {width: 40%}
