--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -154,6 +154,18 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 .header .header_right .header_filtros h4 {font-weight: 700; font-size: 12px; color: #8A8A8D; margin-bottom: 30%; margin-top: 5%;}
 .header .header_right .header_filtros img {width: 40%}
 
+/*** MENU ***/
+
+.menu {width: 100%; height: 50px; background: #BCBCBC; position: fixed; bottom: 0; border-top: 1px solid #8A8A8D;}
+.menu ul {list-style: none; padding: 5px 0 0 0; margin: 0px;}
+.menu ul li {display: block; float: left; border-right: 1px solid #8A8A8D; width: 20%; height: 36px; background-image: url('images/menu_sprite.png'); background-repeat:  no-repeat; }
+.menu ul li:last-child{border-right: 0px!important;}
+.menu ul li.menu_lobby {background-position-x: 25px}
+.menu ul li.menu_quinielas {background-position-x: -45px}
+.menu ul li.menu_privadas {background-position-x: -118px}
+.menu ul li.menu_perfil {background-position-x: -190px}
+.menu ul li.menu_abonar {background-position-x: -265px}
+.menu ul li.selected {background-position-y: -46px;}
 
 /*** LOBBY ***/
 
