--- a/www/views/login.hbs
+++ b/www/views/login.hbs
@@ -4,9 +4,10 @@
 			<img src="images/logo.png">
 		</div>
 		<div class="form">
-			<form id="login_form">
-				<input type="email" name="correo" placeholder="E-mail" value="">
-				<input type="password" name="contrasena" placeholder="Contraseña" value="">
+			<form id="login_form" method="POST" action="" >
+				<input type="text" name="user" placeholder="E-mail or username" value="">
+				<input type="password" name="pass" placeholder="Contraseña" value="">
+				<input type="submit" value="Iniciar sesión">
 			</form>
 			<a class="link_legal" href="">¿Olvidaste tu contraseña?</a>
 			<p class="texto">¿Eres nuevo en Pickwin? <a class="" href="">Crea tu cuenta</a></p>
@@ -14,8 +15,8 @@
 			<a href=""><img class="fb_registry" src="images/fb_registry.png"></a>
 		</div>
 		<div class="legales clearfix">
-			<a class="link_legal" href="">Términos y condiciones | </a>
-			<a class="link_legal" href="">Política de privacidad</a>
+			<a class="link_legal" href="" >Términos y condiciones | </a>
+			<a class="link_legal" href="" >Política de privacidad</a>
 		</div>
 	</div>
 	
