Fixed issues with cors testing of login

--- a/www/views/login.hbs
+++ b/www/views/login.hbs
@@ -5,8 +5,8 @@
 		</div>
 		<div class="form">
 			<form id="login_form" method="POST" action="" >
-				<input type="text" name="user" placeholder="E-mail or username" value="">
-				<input type="password" name="pass" placeholder="Contraseña" value="">
+				<input type="text" name="username" placeholder="E-mail or username" value="">
+				<input type="password" name="password" placeholder="Contraseña" value="">
 				<input type="submit" value="Iniciar sesión">
 			</form>
 			<a class="link_legal" href="">¿Olvidaste tu contraseña?</a>
