New templates and merge with ui dev

--- a/www/views/partials/header.hbs
+++ b/www/views/partials/header.hbs
@@ -1,15 +1,29 @@
-	
-	<header class="clearfix daheader drop_shadow">
-		<h1 class="logo hook" data-resource="home"></h1>
-		<div class="user_info clearfix">
-			<img class="profile_pic" src="images/user_placeholder.png">
-			<div class="username_saldo">
-				<span class="username">JohnFalcon</span>
-				<span class="saldo">$1000.00</span>
-				<span class="saldo picoins">$120.00</span>
+	<div class="header clearfix">
+		<div class="content clearfix">
+			<div class="header_left">
+				<img src="images/logo.png">
 			</div>
-		</div>
-		<div class="filtros">
-			<img src="images/filtros.png" >
-		</div>
-	</header>
+			<div class="header_right clearfix">
+				<div class="header_user_info clearfix">
+					<div class="user_info clearfix">
+						<img src="images/profile_placeholder.png">
+						<h2>Lorem Ipsum Dolor</h2>
+					</div>
+					<div class="user_money clearfix">
+						<div class="money_pesos clearfix">
+							<img src="images/billete.png">
+							<span class="money_ammount">$1,235</span>
+						</div>
+						<div class="money_pickcoins clearfix">
+							<img src="images/pickcoin.png">
+							<span class="money_ammount">$1,234</span>
+						</div>
+					</div>
+				</div><!-- header_user_info -->
+				<div class="header_filtros">
+					<h4>FILTROS</h4>
+					<img src="images/filtros.png">
+				</div>
+			</div>
+		</div><!-- content -->
+	</div><!-- header -->
