--- a/www/css/style.css
+++ b/www/css/style.css
@@ -48,8 +48,8 @@ figure {margin: 0;}
 
 
 /*** SIZING WITH REM ***/
-html { font-size: 62.5%; background: #000 } 
-body { font-size: 24px; font-size: 2.4rem; } /* =24px */
+html { font-size: 62.5%; background: #000; font-size: 14px; color: #d8d8d8; font-weight: 300; font-family: 'Lato'!important;} 
+body { font-size: 14px; font-size: 1.4rem; } /* =24px */
 h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
 .first{ margin-left: 0; padding-left: 0;}
@@ -64,9 +64,9 @@ h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
 /*** GENERAL ***/
 
-body {width: 100%; margin: 0 auto;  }
-.container {width: 100%;  padding: 0 5%; position: relative;}
-.content {width: 85%; float: right; position: relative; }
+body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!important; }
+.container {width: 100%;  padding: 0; position: relative; font-weight: 300; font-family: 'Lato'!important;}
+.content {width: 100%; padding: 0 3%; }
 
 .splash_logo {width: 100%;}
 .splash_logo img {width: 50%; height: auto;}
@@ -81,58 +81,133 @@ body {width: 100%; margin: 0 auto;  }
 .login {text-align: center;}
 .login .splash_logo {padding-top: 30%; margin-bottom: 5%;}
 .login .form {width: 100%; margin-bottom: 20%;}
-.login .form input {width: 100%; background: none; border: 1px solid #ececec; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 32px; padding: 3.5% 2%; }
+.login .form input {width: 100%; background: none; border: 1px solid #d8d8d8; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 14px; padding: 3.5% 2%; }
 .login .form input::placeholder {color: inherit; font-family: 'Lato'}
 .login .form form {margin-bottom: 5%;}
-.login .form a.link_legal {font-size: 32px; color: #8A8A8D; display: block; margin-bottom: 10%; text-decoration: none;}
-.login .form p {font-size: 32px; color: #d8d8d8; margin-bottom: 10%;}
-.login .form p a {font-size: 32px; color: #d8d8d8; }
+.login .form a.link_legal {font-size: 14px; color: #8A8A8D; display: block; margin-bottom: 10%; text-decoration: none;}
+.login .form p {font-size: 14px; color: #d8d8d8; margin-bottom: 10%;}
+.login .form p a {font-size: 14px; color: #d8d8d8; }
 .fb_registry {width: 70%;}
 .login .legales {width: 100%;}
-.login .legales a.link_legal {font-size: 32px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
+.login .legales a.link_legal {font-size: 14px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
 
 /*** REGISTRO ***/
 
 .registro {text-align: center;}
 .registro .splash_logo {padding-top: 10%; margin-bottom: 5%;}
-.registro .splash_logo img {width: auto!important; margin-bottom: 10%;}
-.registro .splash_logo p {font-size: 32px; color: #d8d8d8;  line-height: 55px;  width: 75%; margin: 0 auto 10% auto;}
+.registro .splash_logo img {width: 50%!important; margin-bottom: 10%;}
+.registro .splash_logo p {font-size: 14px; color: #d8d8d8;  line-height: 22px;  width: 75%; margin: 0 auto 10% auto;}
 .registro .fb_registry {width: 70%; margin-bottom: 10%;}
 .registro .form {width: 100%; }
-.registro .form h3 {font-family: 'Lato'; font-weight: 400; font-size: 32px; color: #d8d8d8; margin-bottom: 5%;}
-.registro .form input {width: 100%; background: none; border: 1px solid #ececec; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 32px; padding: 3.5% 2%; }
+.registro .form h3 {font-family: 'Lato'; font-weight: 300; font-size: 14px; color: #d8d8d8; margin-bottom: 5%;}
+.registro .form input {width: 100%; background: none; border: 1px solid #d8d8d8; border-radius: 5px; margin-bottom: 3%; color: #d8d8d8; font-family: 'Lato'; font-size: 14px; padding: 3.5% 2%; }
 .registro .form input::placeholder {color: inherit; font-family: 'Lato'}
 .registro .form form {margin-bottom: 5%;}
-.registro .form a.link_legal {font-size: 32px; color: #8A8A8D; display: block; margin-bottom: 10%; text-decoration: none;}
+.registro .form a.link_legal {font-size: 14px; color: #8A8A8D; display: block; margin-bottom: 10%; text-decoration: none;}
 
 .registro .legales {width: 100%;}
-.registro .legales a.link_legal {font-size: 32px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
+.registro .legales a.link_legal {font-size: 14px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
 
 .registro .form .selectors {margin-top: 5%; margin-bottom: 10%;} 
 .registro .form .selector {width: 100%; text-align: left;}
 .registro .form .selector input {display: inline-block; float: left; width: 5%; height: 2%; margin-right: 3%;}
-.registro .form .selector label {font-size: 32px; color: #d8d8d8;  line-height: 55px;  width: 75%; margin: 0 auto 10% auto; display: inline block;}
-.registro .form .selector label a {font-size: 32px; color: #d8d8d8; }
+.registro .form .selector label {font-size: 14px; color: #d8d8d8;  line-height: 30px;  width: 75%; margin: 0 auto 10% auto; display: inline block;}
+.registro .form .selector label a {font-size: 14px; color: #d8d8d8; }
 .registro .crearcuenta {width: 50%; margin-bottom: 10%;}
-.registro .form p {font-size: 12px; color: #8A8A8D;  line-height: 55px;  width: 100%; margin: 0 auto 2% auto;}
+.registro .form p {font-size: 12px; color: #8A8A8D;  line-height: 22px;  width: 100%; margin: 0 auto 2% auto;}
 
 /*** REGISTRO EXITOSO ***/
 
 .registro_exitoso {text-align: center;}
-.registro_exitoso .splash_logo h3 {font-family: 'Lato'; font-weight: 400; font-size: 32px; color: #d8d8d8; margin-bottom: 5%;}
+.registro_exitoso .splash_logo h3 {font-family: 'Lato'; font-weight: 400; font-size: 20px; color: #d8d8d8; margin-bottom: 20%;}
 .registro_exitoso .splash_logo {padding-top: 10%; margin-bottom: 5%;}
 .registro_exitoso .splash_logo img {width: auto!important; margin-bottom: 10%;}
-.registro_exitoso .splash_logo p {font-size: 22px; color: #d8d8d8;  line-height: 55px;  width: 100%; margin: 0 auto 5% auto;}
+.registro_exitoso .splash_logo p {font-size: 14px; color: #d8d8d8;  line-height: 22px;  width: 100%; margin: 0 auto 5% auto;}
 .registro_exitoso .enviarcodigo {width: 100%; margin-top: 10%;}
 
 /*** ACTIVAR CUENTA ***/
 
 .activacion {text-align: center;}
-.activacion .splash_logo h3 {font-family: 'Lato'; font-weight: 400; font-size: 32px; color: #d8d8d8; margin-bottom: 5%;}
+.activacion .splash_logo h3 {font-family: 'Lato'; font-weight: 400; font-size: 20px; color: #d8d8d8; margin-bottom: 5%;}
 .activacion .splash_logo {padding-top: 10%; margin-bottom: 5%;}
-.activacion .splash_logo img {width: auto!important; margin-bottom: 10%;}
-.activacion .splash_logo p {font-size: 34px; color: #d8d8d8;  line-height: 55px;  width: 100%; margin: 0 auto 5% auto;}
+.activacion .splash_logo img {width: 70%!important; margin-bottom: 10%;}
+.activacion .splash_logo p {font-size: 14px; color: #d8d8d8;  line-height: 22px;  width: 100%; margin: 0 auto 5% auto;}
 .activacion .comenzar {width: 70%; margin-top: 10%;}
+
+/*** HEADER ***/
+
+.header {width: 100%; height; background: #000; padding: 3% 0; position: fixed;}
+.header .header_left {float: left; width: 28%; text-align: center; margin-right: 2%;}
+.header .header_left img {width: 90%; vertical-align: middle; padding-top: 15%}
+.header .header_right {float: right; width: 70%; border-left: 1px solid #414042; padding: 1% 0 1% 0;}
+.header .header_right .header_user_info {width: 75%; float: left; padding-left: 5%;}
+.header .header_right .header_user_info .user_info {width: 100%; margin-bottom: 7.5%}
+.header .header_right .header_user_info .user_info img {width: 24px; height: auto; float: left; margin-right: 7px;}
+.header .header_right .header_user_info .user_info h2 {font-weight: 300; font-family: 'Lato'; font-size: 14px; float: left; margin: 0px; padding-top: 2%;}
+.header .header_right .header_user_info .user_money {width: 100%;}
+.header .header_right .header_user_info .user_money .money_pesos {float: left; margin-right: 5%;}
+.header .header_right .header_user_info .user_money .money_pesos img {width: 20px; height: auto; float: left; margin-top: 3%}
+.header .header_right .header_user_info .user_money .money_pickcoins {float: left;}
+.header .header_right .header_user_info .user_money .money_pickcoins img {width: 14px; height: auto; float: left;}
+.header .header_right .header_user_info .user_money span {display: block; float: left; font-size: 13px; font-family: 'Lato'; margin-left: 5px;}
+.header .header_right .header_filtros {width: 20%; float: right; text-align: center;}
+.header .header_right .header_filtros h4 {font-weight: 700; font-size: 12px; color: #8A8A8D; margin-bottom: 30%; margin-top: 5%;}
+.header .header_right .header_filtros img {width: 40%}
+
+/*** MENU ***/
+
+.menu {width: 100%; height: 50px; background: #BCBCBC; position: fixed; bottom: 0; border-top: 1px solid #8A8A8D;}
+.menu ul {list-style: none; padding: 5px 0 0 0; margin: 0px;}
+.menu ul li {display: block; float: left; border-right: 1px solid #8A8A8D; width: 20%; height: 36px; background-image: url('images/menu_sprite.png'); background-repeat:  no-repeat; }
+.menu ul li:last-child{border-right: 0px!important;}
+.menu ul li.menu_lobby {background-position-x: 25px}
+.menu ul li.menu_quinielas {background-position-x: -45px}
+.menu ul li.menu_privadas {background-position-x: -118px}
+.menu ul li.menu_perfil {background-position-x: -190px}
+.menu ul li.menu_abonar {background-position-x: -265px}
+.menu ul li.selected {background-position-y: -46px;}
+
+/*** LOBBY ***/
+
+.lobby {background-image: url('images/background.png'); background-position: center top; background-attachment: fixed; background-size: cover; }
+.quinielas {padding-top: 90px; padding-bottom: 70px;}
+
+/*** QUINIELAS ***/
+
+a.link_wrapper {color: inherit; text-decoration: none;}
+.quiniela {width: 100%; background: #000; border: 1px solid #414042; padding: 2.5%; border-radius: 3px; margin-top: 10px;}
+.quiniela_header {width: 100%; margin-bottom: 10px;}
+.quiniela_header .quiniela_iconos {float: left; margin-right: 10px;}
+.quiniela_header .quiniela_iconos img {float: left; width: 16px; margin-right: 1px;}
+.quiniela_header h2 {font-weight: 400; font-size: 12px; float: left; margin: 0px;}
+.quiniela_content {width: 100%; font-size: 10px;}
+.quiniela_content img {width: 16px; height: auto; float: left;}
+
+.quiniela_content .quiniela_info span {display: block; margin-bottom: 2px;}
+.quiniela_content .quiniela_info span.limite {color: #F6A623;}
+
+.quiniela .quiniela_content div {float: left;}
+.quiniela .quiniela_content span {display: block;}
+.quiniela .quiniela_content span.titulo {margin-bottom: 15px;}
+.quiniela .quiniela_content span.number {float: left; margin-left: 5px;}
+
+/*quiniela open*/
+
+.quiniela.quiniela_open .quiniela_content .quiniela_info {width: 50%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_entrada {width: 25%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 25%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_bolsa span.number {float: left; margin-left: 5px; color: #77BC1F;}
+.quiniela.quiniela_open .quiniela_content .quiniela_bolsa img {margin-top: -2px;}
+
+/*quiniela_live*/
+
+.quiniela.quiniela_live .quiniela_content .quiniela_info {width: 30%; float: left;}
+.quiniela.quiniela_live .quiniela_content .quiniela_picks_ok {width: 15%; float: left;}
+.quiniela.quiniela_live .quiniela_content .quiniela_aganar {width: 20%; float: left;}
+.quiniela.quiniela_live .quiniela_content .quiniela_entrada {width: 20%; float: left;}
+.quiniela.quiniela_live .quiniela_content .quiniela_bolsa {width: 15%; float: left;}
+.quiniela.quiniela_live .quiniela_content .quiniela_bolsa span.number {float: left; margin-left: 5px; color: #77BC1F;}
+.quiniela.quiniela_live .quiniela_content .quiniela_bolsa img {margin-top: -2px;}
 
 
 	/*Loader*/
