--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -156,7 +156,7 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 
 /*** MENU ***/
 
-.menu {width: 100%; height: 50px; background: #BCBCBC; position: fixed; bottom: 0; border-top: 1px solid #8A8A8D;}
+.menu {width: 100%; height: 50px; background: #BCBCBC; position: fixed; bottom: 0; border-top: 1px solid #8A8A8D; z-index: 100;}
 .menu ul {list-style: none; padding: 5px 0 0 0; margin: 0px;}
 .menu ul li {display: block; float: left; border-right: 1px solid #8A8A8D; width: 20%; height: 36px; background-image: url('images/menu_sprite.png'); background-repeat:  no-repeat; }
 .menu ul li:last-child{border-right: 0px!important;}
@@ -212,13 +212,27 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*** FILTROS ***/
 
-.filtros {position: fixed; top: 90px; right: 0; background: #000; width: 85%; text-align: center; padding: 20px;}
-.filtros ul {list-style: none; margin: 0px; padding: 0px; width: 100%;}
-.filtros ul li {display: inline-block; float: left; background: url('images/bg_gradient_32.png') repeat-x; height: 32px; vertical-align: middle;}
-.filtros ul li img {width: 24px; height: auto; display: inline-block; vertical-align: middle;}
-.filtros h3 {font-size: 12px; font-weight: 400; margin: 0px; padding-top: 15px;}
+.filtros_wrapper {width: 100%; height: 100%; position: fixed; top: 87px; left: 0px; background: url('images/bg_trans_filtros.png') repeat;}
+.filtros {position: fixed; top: 87px; right: 0; background: #000; width: 85%; text-align: center; padding: 20px; height: 100%; z-index: 90;}
+.filtros div {margin-bottom: 20px;}
+.filtros ul {list-style: none; margin: 10px 0 0px 0; padding: 0px; width: 100%;}
+.filtros ul li {display: inline-block; float: left; background: url('images/bg_gradient_32.png') repeat-x; height: 32px; padding-top: 7px; border-radius: 0px 0px 5px 5px }
+.filtros ul li img {width: 22px; height: auto; }
+.filtros h3 {font-size: 12px; font-weight: 400; margin: 0px; }
+.filtros ul li h3 {padding-top: 3px;}
+.filtros ul li.selected {background: url('images/bg_verde_filtros.png') repeat; } 
 
 .filtros .filtros_moneda ul li {width: 33.3%}
 
-.filtros .filtros_deporte ul li:first-child {width: 100%;} 
+.filtros .filtros_deporte ul li:first-child {width: 100%; margin-bottom: 9px;} 
 .filtros .filtros_deporte ul li {width: 14.28%;}
+
+.filtros .filtros_tipo {width: 100%;}
+.filtros .filtros_tipo ul li {width: 50%} 
+
+.filtros .filtros_estado {width: 100%;}
+.filtros .filtros_estado ul li {width: 33.3%} 
+
+.filtros #deporte_soccer {width: 100%;}
+.filtros #deporte_soccer li {width: 16.6%; text-align: center;}
+.filtros #deporte_soccer li span {font-size: 10px; display: block; padding-top: 3px;}
