--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -175,7 +175,7 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 /*** QUINIELAS ***/
 
 a.link_wrapper {color: inherit; text-decoration: none;}
-.quiniela {width: 100%; background: #000; border: 1px solid #414042; padding: 2.5%; border-radius: 3px; margin-top: 10px;}
+.quiniela {width: 99%; background: #000; border: 1px solid #414042; padding: 2.5%; border-radius: 3px; margin-top: 10px;}
 .quiniela_header {width: 100%; margin-bottom: 10px;}
 .quiniela_header .quiniela_iconos {float: left; margin-right: 10px;}
 .quiniela_header .quiniela_iconos img {float: left; width: 16px; margin-right: 1px;}
@@ -236,3 +236,20 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .filtros #deporte_soccer {width: 100%;}
 .filtros #deporte_soccer li {width: 16.6%; text-align: center;}
 .filtros #deporte_soccer li span {font-size: 10px; display: block; padding-top: 3px;}
+
+
+/*** MIS QUINIELAS OVERLAY ***/
+
+.misquinielas {position: fixed; top: 90px; width: 100%; margin-left: 97%; background: url('images/bg_trans_quinielas.png') repeat; height: 100%; padding-left: 1%;}
+.misquinielas a.link_wrapper .quiniela_open {border-left: 3px solid #77BC1F;}
+.misquinielas a.link_wrapper .quiniela_live {border-left: 3px solid #F6A623;}
+.misquinielas a.link_wrapper .quiniela_closed {border-left: 3px solid #FF576C;}
+.misquinielas a.link_wrapper .quiniela_otra {border-left: 3px solid #4A90E2;}
+
+
+
+
+
+
+
+
