--- a/www/css/style.css
+++ b/www/css/style.css
@@ -141,8 +141,9 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 .header .header_left img {width: 90%; vertical-align: middle; padding-top: 15%}
 .header .header_right {float: right; width: 70%; border-left: 1px solid #414042; padding: 1% 0 1% 0;}
 .header .header_right .header_user_info {width: 75%; float: left; padding-left: 5%;}
-.header .header_right .header_user_info .user_info {width: 100%; margin-bottom: 7.5%}
-.header .header_right .header_user_info .user_info img {width: 24px; height: auto; float: left; margin-right: 7px;}
+.header .header_right .header_user_info .user_info {width: 100%; margin-bottom: 7.5%;}
+.header .header_right .header_user_info .user_info .avatar_container{ width: 24px; height: 24px; -webkit-border-radius: 50%; -moz-border-radius: 50%; border-radius: 50%; overflow: hidden; float: left; margin-right: 7px;}
+.header .header_right .header_user_info .user_info img { width: 100%; height: auto; }
 .header .header_right .header_user_info .user_info h2 {font-weight: 300; font-family: 'Lato'; font-size: 14px; float: left; margin: 0px; padding-top: 2%;}
 .header .header_right .header_user_info .user_money {width: 100%;}
 .header .header_right .header_user_info .user_money .money_pesos {float: left; margin-right: 5%;}
