--- a/www/views/login.hbs
+++ b/www/views/login.hbs
@@ -1,22 +1,23 @@
 
 	<div class="container login">
-		<div class="splash_logo">
-			<img src="images/logo.png">
-		</div>
-		<div class="form">
-			<form id="login_form" method="POST" action="" >
-				<input type="text" name="username" placeholder="E-mail or username" value="">
-				<input type="password" name="password" placeholder="Contraseña" value="">
-				<input type="submit" value="Iniciar sesión">
-			</form>
-			<a class="link_legal" href="">¿Olvidaste tu contraseña?</a>
-			<p class="texto">¿Eres nuevo en Pickwin? <a class="" href="">Crea tu cuenta</a></p>
-			<p class="texto">o</p>
-			<a href=""><img class="fb_registry" src="images/fb_registry.png"></a>
-		</div>
-		<div class="legales clearfix">
-			<a class="link_legal" href="" >Términos y condiciones | </a>
-			<a class="link_legal" href="" >Política de privacidad</a>
+		<div class="content">
+			<div class="splash_logo">
+				<img src="images/logo.png">
+			</div>
+			<div class="form">
+				<form id="login_form" method="POST" action="" >
+					<input type="text" name="username" placeholder="E-mail" value="">
+					<input type="password" name="password" placeholder="Contraseña" value="">
+					<input type="submit" value="Iniciar sesión">
+				</form>
+				<a class="link_legal" href="">¿Olvidaste tu contraseña?</a>
+				<p class="texto">¿Eres nuevo en Pickwin? <a class="" href="">Crea tu cuenta</a></p>
+				<p class="texto">o</p>
+				<a href=""><img class="fb_registry" src="images/fb_registry.png"></a>
+			</div>
+			<div class="legales clearfix">
+				<a class="link_legal" href="">Términos y condiciones | </a>
+				<a class="link_legal" href="">Política de privacidad</a>
+			</div>
 		</div>
 	</div>
-	
