Recompiled templates with full image path

--- a/www/views/lobby.hbs
+++ b/www/views/lobby.hbs
@@ -27,8 +27,8 @@
 				<a class="link_wrapper" href="">
 				<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
-						<img src="images/natural.png">
-						<img src="images/soccer.png">
+						<img src="{{cordova_full_path}}images/natural.png">
+						<img src="{{cordova_full_path}}images/soccer.png">
 					</div><!-- iconos -->
 					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
 				</div><!-- quiniela_header -->
@@ -40,12 +40,12 @@
 					</div><!-- quiniela_info -->
 					<div class="quiniela_entrada clearfix">
 						<span class="titulo">ENTRADA</span>
-						<img src="images/billecoin.png">
+						<img src="{{cordova_full_path}}images/billecoin.png">
 						<span class="number">$1,234</span>
 					</div>
 					<div class="quiniela_bolsa clearfix">
 						<span class="titulo">BOLSA</span>
-						<img src="images/garantizado.png">
+						<img src="{{cordova_full_path}}images/garantizado.png">
 						<span class="number guarantee">$5,678</span>
 					</div>
 				</div><!-- quiniela_content -->
@@ -58,8 +58,8 @@
 				<a class="link_wrapper" href="">
 				<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
-						<img src="images/linea.png">
-						<img src="images/nfl.png">
+						<img src="{{cordova_full_path}}images/linea.png">
+						<img src="{{cordova_full_path}}images/nfl.png">
 					</div><!-- iconos -->
 					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
 				</div><!-- quiniela_header -->
@@ -71,12 +71,12 @@
 					</div><!-- quiniela_info -->
 					<div class="quiniela_entrada clearfix">
 						<span class="titulo">ENTRADA</span>
-						<img src="images/billecoin.png">
+						<img src="{{cordova_full_path}}images/billecoin.png">
 						<span class="number">$1,234</span>
 					</div>
 					<div class="quiniela_bolsa clearfix">
 						<span class="titulo">BOLSA</span>
-						<img src="images/garantizado.png">
+						<img src="{{cordova_full_path}}images/garantizado.png">
 						<span class="number guarantee">$5,678</span>
 					</div>
 				</div><!-- quiniela_content -->
@@ -89,8 +89,8 @@
 				<a class="link_wrapper" href="">
 				<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
-						<img src="images/linea.png">
-						<img src="images/nfl.png">
+						<img src="{{cordova_full_path}}images/linea.png">
+						<img src="{{cordova_full_path}}images/nfl.png">
 					</div><!-- iconos -->
 					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
 				</div><!-- quiniela_header -->
@@ -102,12 +102,12 @@
 					</div><!-- quiniela_info -->
 					<div class="quiniela_entrada clearfix">
 						<span class="titulo">ENTRADA</span>
-						<img src="images/billecoin.png">
+						<img src="{{cordova_full_path}}images/billecoin.png">
 						<span class="number">$1,234</span>
 					</div>
 					<div class="quiniela_bolsa clearfix">
 						<span class="titulo">BOLSA</span>
-						<img src="images/garantizado.png">
+						<img src="{{cordova_full_path}}images/garantizado.png">
 						<span class="number guarantee">$5,678</span>
 					</div>
 				</div><!-- quiniela_content -->
@@ -120,8 +120,8 @@
 				<a class="link_wrapper" href="">
 				<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
-						<img src="images/linea.png">
-						<img src="images/nfl.png">
+						<img src="{{cordova_full_path}}images/linea.png">
+						<img src="{{cordova_full_path}}images/nfl.png">
 					</div><!-- iconos -->
 					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
 				</div><!-- quiniela_header -->
@@ -133,12 +133,12 @@
 					</div><!-- quiniela_info -->
 					<div class="quiniela_entrada clearfix">
 						<span class="titulo">ENTRADA</span>
-						<img src="images/billecoin.png">
+						<img src="{{cordova_full_path}}images/billecoin.png">
 						<span class="number">$1,234</span>
 					</div>
 					<div class="quiniela_bolsa clearfix">
 						<span class="titulo">BOLSA</span>
-						<img src="images/garantizado.png">
+						<img src="{{cordova_full_path}}images/garantizado.png">
 						<span class="number guarantee">$5,678</span>
 					</div>
 				</div><!-- quiniela_content -->
@@ -151,8 +151,8 @@
 				<a class="link_wrapper" href="">
 				<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
-						<img src="images/linea.png">
-						<img src="images/nfl.png">
+						<img src="{{cordova_full_path}}images/linea.png">
+						<img src="{{cordova_full_path}}images/nfl.png">
 					</div><!-- iconos -->
 					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
 				</div><!-- quiniela_header -->
@@ -164,12 +164,12 @@
 					</div><!-- quiniela_info -->
 					<div class="quiniela_entrada clearfix">
 						<span class="titulo">ENTRADA</span>
-						<img src="images/billecoin.png">
+						<img src="{{cordova_full_path}}images/billecoin.png">
 						<span class="number">$1,234</span>
 					</div>
 					<div class="quiniela_bolsa clearfix">
 						<span class="titulo">BOLSA</span>
-						<img src="images/garantizado.png">
+						<img src="{{cordova_full_path}}images/garantizado.png">
 						<span class="number guarantee">$5,678</span>
 					</div>
 				</div><!-- quiniela_content -->
