--- a/www/views/login.hbs
+++ b/www/views/login.hbs
@@ -2,7 +2,7 @@
 	<div class="container login">
 		<div class="content">
 			<div class="splash_logo">
-				<img src="images/logo.png">
+				<img src="{{cordova_full_path}}images/logo.png">
 			</div>
 			<div class="form">
 				<form id="login_form" method="POST" action="" >
@@ -13,7 +13,7 @@
 				<a class="link_legal" href="">¿Olvidaste tu contraseña?</a>
 				<p class="texto">¿Eres nuevo en Pickwin? <a class="" href="">Crea tu cuenta</a></p>
 				<p class="texto">o</p>
-				<a href=""><img class="fb_registry" src="images/fb_registry.png"></a>
+				<a href=""><img class="fb_registry" src="{{cordova_full_path}}images/fb_registry.png"></a>
 			</div>
 			<div class="legales clearfix">
 				<a class="link_legal" href="">Términos y condiciones | </a>
