--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -4,31 +4,31 @@
 				<h3>MONEDA</h3>
 				<ul class="clearfix">
 					<li data="todos_moneda"><h3>TODOS</h3></li>
-					<li data="money_moneda"><img src="images/billete.png"></li>
-					<li data="pickcoin_moneda"><img src="images/pickcoin.png"></li>
+					<li data="money_moneda"><img src="{{cordova_full_path}}images/billete.png"></li>
+					<li data="pickcoin_moneda"><img src="{{cordova_full_path}}images/pickcoin.png"></li>
 				</ul>
 				<ul class="clearfix" id="money_moneda">
-					<li data="money_moneda"><img src="images/billete.png"></li>
-					<li data="money_moneda"><img src="images/bill2.png"></li>
-					<li data="money_moneda"><img src="images/bill3.png"></li>
+					<li data="money_moneda"><img src="{{cordova_full_path}}images/billete.png"></li>
+					<li data="money_moneda"><img src="{{cordova_full_path}}images/bill2.png"></li>
+					<li data="money_moneda"><img src="{{cordova_full_path}}images/bill3.png"></li>
 				</ul>
 				<ul class="clearfix" id="pickcoin_moneda">
-					<li data="money_moneda"><img src="images/pickcoin.png"></li>
-					<li data="money_moneda"><img src="images/pic2.png"></li>
-					<li data="money_moneda"><img src="images/pic3.png"></li>
+					<li data="money_moneda"><img src="{{cordova_full_path}}images/pickcoin.png"></li>
+					<li data="money_moneda"><img src="{{cordova_full_path}}images/pic2.png"></li>
+					<li data="money_moneda"><img src="{{cordova_full_path}}images/pic3.png"></li>
 				</ul>
 			</div><!-- filtros_moneda -->
 			<div class="filtros_deporte clearfix">
 				<h3>DEPORTE</h3>
 				<ul class="clearfix">
 					<li data="todos_deporte"><h3>TODOS</h3></li>
-					<li data="deporte_soccer"><img src="images/soccer.png"></li>
-					<li data="deporte_basket"><img src="images/basket.png"></li>
-					<li data="deporte_baseball"><img src="images/baseball.png"></li>
-					<li data="deporte_nfl"><img src="images/nfl.png"></li>
-					<li data="deporte_golf"><img src="images/golf.png"></li>
-					<li data="deporte_tennis"><img src="images/tennis.png"></li>
-					<li data="deporte_f1"><img src="images/f1.png"></li>
+					<li data="deporte_soccer"><img src="{{cordova_full_path}}images/soccer.png"></li>
+					<li data="deporte_basket"><img src="{{cordova_full_path}}images/basket.png"></li>
+					<li data="deporte_baseball"><img src="{{cordova_full_path}}images/baseball.png"></li>
+					<li data="deporte_nfl"><img src="{{cordova_full_path}}images/nfl.png"></li>
+					<li data="deporte_golf"><img src="{{cordova_full_path}}images/golf.png"></li>
+					<li data="deporte_tennis"><img src="{{cordova_full_path}}images/tennis.png"></li>
+					<li data="deporte_f1"><img src="{{cordova_full_path}}images/f1.png"></li>
 				</ul>
 				<ul class="clearfix" id="deporte_soccer">
 					<li data="soccer_todas"><span>Todas</span></li>
