--- a/www/views/partials/header.hbs
+++ b/www/views/partials/header.hbs
@@ -1,13 +1,13 @@
 	<div class="header clearfix">
 		<div class="content clearfix">
 			<div class="header_left">
-				<img src="images/logo.png">
+				<img src="{{cordova_full_path}}images/logo.png">
 			</div>
 			<div class="header_right clearfix">
 				<div class="header_user_info clearfix">
 					<div class="user_info clearfix">
 						{{^ me.avatar}}
-							<img src="images/profile_placeholder.png">
+							<img src="{{cordova_full_path}}images/profile_placeholder.png">
 						{{/ me.avatar}}
 						{{# me.avatar}}
 							<div class="avatar_container">
@@ -18,18 +18,18 @@
 					</div>
 					<div class="user_money clearfix">
 						<div class="money_pesos clearfix">
-							<img src="images/billete.png">
+							<img src="{{cordova_full_path}}images/billete.png">
 							<span class="money_ammount">${{me.balancePc}}</span>
 						</div>
 						<div class="money_pickcoins clearfix">
-							<img src="images/pickcoin.png">
+							<img src="{{cordova_full_path}}images/pickcoin.png">
 							<span class="money_ammount">${{me.balanceReal}}</span>
 						</div>
 					</div>
 				</div><!-- header_user_info -->
 				<div class="header_filtros">
 					<h4>FILTROS</h4>
-					<img src="images/filtros.png">
+					<img src="{{cordova_full_path}}images/filtros.png">
 				</div>
 			</div>
 		</div><!-- content -->
