Each quiniela template compiled and some header styles

--- a/www/views/partials/each-quiniela.hbs
+++ b/www/views/partials/each-quiniela.hbs
@@ -9,7 +9,7 @@
 					<img src="{{cordova_full_path}}images/natural.png">
 					<img src="{{cordova_full_path}}images/soccer.png">
 				</div><!-- iconos -->
-				<h2>{{# tournament_instances}}{{name}}- {{/ tournament_instances}}{{name_replaced}}</h2>
+				<h2>{{name_replaced}}</h2>
 			</div><!-- quiniela_header -->
 			<div class="quiniela_content clearfix">
 				<div class="quiniela_info clearfix">
