--- a/www/views/partials/each-quiniela.hbs
+++ b/www/views/partials/each-quiniela.hbs
@@ -7,7 +7,7 @@
 			<div class="quiniela_header clearfix">
 				<div class="quiniela_iconos clearfix">
 					<img src="{{cordova_full_path}}images/natural.png">
-					<img src="{{cordova_full_path}}images/soccer.png">
+					<img src="{{cordova_full_path}}images/{{sport.icon}}.png">
 				</div><!-- iconos -->
 				<h2>{{name_replaced}}</h2>
 			</div><!-- quiniela_header -->
