--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -22,9 +22,9 @@
 				<h3>DEPORTE</h3>
 				<ul class="clearfix">
 					<li data="todos_deporte"><h3>TODOS</h3></li>
-					<li data="deporte_soccer"><img src="{{cordova_full_path}}images/soccer.png"></li>
-					<li data="deporte_basket"><img src="{{cordova_full_path}}images/basket.png"></li>
-					<li data="deporte_baseball"><img src="{{cordova_full_path}}images/baseball.png"></li>
+					<li data="deporte_soccer"><img src="{{cordova_full_path}}images/icon-football.png"></li>
+					<li data="deporte_basket"><img src="{{cordova_full_path}}images/ion-ios-basketball-outline.png"></li>
+					<li data="deporte_baseball"><img src="{{cordova_full_path}}images/icon-baseball.png"></li>
 					<li data="deporte_nfl"><img src="{{cordova_full_path}}images/nfl.png"></li>
 					<li data="deporte_golf"><img src="{{cordova_full_path}}images/golf.png"></li>
 					<li data="deporte_tennis"><img src="{{cordova_full_path}}images/tennis.png"></li>
