--- a/www/views/login.hbs
+++ b/www/views/login.hbs
@@ -11,13 +11,13 @@
 					<input type="submit" value="Iniciar sesión">
 				</form>
 				<a class="link_legal" href="">¿Olvidaste tu contraseña?</a>
-				<p class="texto">¿Eres nuevo en Pickwin? <a class="" href="">Crea tu cuenta</a></p>
+				<p class="texto">¿Eres nuevo en Pickwin? <a class="hook" data-resource="register" href="register.html">Crea tu cuenta</a></p>
 				<p class="texto">o</p>
 				<a href=""><img class="fb_registry" src="{{cordova_full_path}}images/fb_registry.png"></a>
 			</div>
 			<div class="legales clearfix">
-				<a class="link_legal" href="">Términos y condiciones | </a>
-				<a class="link_legal" href="">Política de privacidad</a>
+				<a class="link_legal" onclick="window.open('https://www.pickwin.net/terminos-y-condiciones', '_blank', 'location=yes') >Términos y condiciones | </a>
+				<a class="link_legal" onclick="window.open('https://www.pickwin.net/aviso-de-privacidad', '_blank', 'location=yes') >Política de privacidad</a>
 			</div>
 		</div>
 	</div>
