--- a/www/views/register-success.hbs
+++ b/www/views/register-success.hbs
@@ -2,11 +2,11 @@
 	<div class="container registro_exitoso">
 		<div class="content">
 			<div class="splash_logo">
-				<h3>¡REGISTRO EXITOSO!</h3>
-				<p>Gracias por registrarte en Pickwin, es necesario que actives tu cuenta para poder comenzar a jugar.</p>
+				<h3>{{header_title}}</h3>
+				<p>¡Gracias por registrarte en Pickwin, ahora puedes comenzar a jugar!</p>
 				<p>Hemos enviado a la dirección de correo electrónico con la que te registraste un mensaje con la información necesaria para activar tu cuenta.</p>
 				<p>Revisa tu bandeja de entrada y de spam, ¡Gracias!</p>
 			</div>
-			<a href=""><img class="enviarcodigo" src="images/enviarcodigo.png"></a>
+			{{!-- <a href=""><img class="enviarcodigo" src="images/enviarcodigo.png"></a> --}}
 		</div>
 	</div>
