--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -25,10 +25,10 @@
 					<li data="deporte_soccer"><img src="{{cordova_full_path}}images/icon-football.png"></li>
 					<li data="deporte_basket"><img src="{{cordova_full_path}}images/ion-ios-basketball-outline.png"></li>
 					<li data="deporte_baseball"><img src="{{cordova_full_path}}images/icon-baseball.png"></li>
-					<li data="deporte_nfl"><img src="{{cordova_full_path}}images/nfl.png"></li>
-					<li data="deporte_golf"><img src="{{cordova_full_path}}images/golf.png"></li>
+					<li data="deporte_nfl"><img src="{{cordova_full_path}}images/icon-nfl.png"></li>
+					{{!-- <li data="deporte_golf"><img src="{{cordova_full_path}}images/golf.png"></li>
 					<li data="deporte_tennis"><img src="{{cordova_full_path}}images/tennis.png"></li>
-					<li data="deporte_f1"><img src="{{cordova_full_path}}images/f1.png"></li>
+					<li data="deporte_f1"><img src="{{cordova_full_path}}images/f1.png"></li> --}}
 				</ul>
 				<ul class="clearfix" id="deporte_soccer">
 					<li data="soccer_todas"><span>Todas</span></li>
