--- a/www/views/register.hbs
+++ b/www/views/register.hbs
@@ -1,35 +1,37 @@
+<div class="container registro">
+	<div class="content">
+		<div class="splash_logo">
+			<img src="{{cordova_full_path}}images/tuprimeravez.svg">
+			<p>Regístrate y te regalamos la entrada  a las quinielas Tu Primera Vez,  además te regalamos 100 Pickcoins  para que comiences a jugar.</p>
+		</div>
+		<a href=""><img class="fb_registry" src="{{cordova_full_path}}images/fb_registry.png"></a>
 
-	<div class="container registro">
-		<div class="content">
-			<div class="splash_logo">
-				<img src="images/tuprimeravez.png">
-				<p>Regístrate y te regalamos la entrada  a las quinielas Tu Primera Vez, además te regalamos 100 Picoins  para que comiences a jugar.</p>
-			</div>
-			<a href=""><img class="fb_registry" src="images/fb_registry.png"></a>
 
-
-			<div class="form">
-				<h3>REGISTRO</h3>
-				<form id="login_form">
-					<input type="text" name="nombre" placeholder="Nombre*" value="">
-					<input type="text" name="apellido" placeholder="Apellido*" value="">
-					<input type="text" name="apodo" placeholder="Apodo*" value="">
-					<input type="email" name="correo" placeholder="E-mail*" value="">
-					<input type="password" name="contrasena" placeholder="Contraseña*" value="">
-					<input type="password" name="contrasena" placeholder="Repite tu contraseña*" value="">
-					<div class="selectors clearfix">
-						<div class="selector clearfix">
-							<input type="checkbox" value="" name="acepta_terminos">
-							<label for="acepta_terminos">Acepto los <a href="">términos y condiciones</a></label>
-						</div>
-						<div class="selector clearfix">
-							<input type="checkbox" value="" name="mayor_edad">
-							<label for="acepta_terminos">Certifico que tengo al menos 18 años de edad</label>
-						</div>
+		<div class="form">
+			<h3>{{header_title}}</h3>
+			<form id="register_form" method="POST" action="" >
+				
+				<input type="text" name="name" placeholder="Nombre*" value="">
+				<input type="text" name="last_name" placeholder="Apellido*" value="">
+				<input type="text" name="nickname" placeholder="Apodo*" value="">
+				<input type="email" name="email" placeholder="E-mail*" value="">
+				<input id="password" type="password" name="password" placeholder="Contraseña*" value="">
+				<input id="repeat_password" type="password" name="repeat_password" placeholder="Repite tu contraseña*" value="">
+				<div class="selectors clearfix">
+					
+					<div class="selector clearfix">
+						<input type="checkbox" value="true" name="accept_terms">
+						<label for="acepta_terminos">Acepto los <a href="">términos y condiciones</a></label>
 					</div>
-					<a href=""><img class="crearcuenta" src="images/crearcuenta.png"></a>
-				</form>
-				<p class="legales">Pickwin es una plataforma de entretenimiento de juegos de habilidad, <br />no es un sitio de apuestas.</p>
-			</div>
+					
+					<div class="selector clearfix">
+						<input type="checkbox" value="true" name="is_M18">
+						<label for="acepta_terminos">Certifico que tengo al menos 18 años de edad</label>
+					</div>
+				</div>
+				<input class="submit_green" type="submit" value="Crear cuenta">
+			</form>
+			<p class="legales">Pickwin es una plataforma de entretenimiento de juegos de habilidad, <br/>no es un sitio de apuestas.</p>
 		</div>
 	</div>
+</div>
